2006-04-12  Corinna Vinschen  <corinna@vinschen.de>
	    Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (spawn_guts): Revert patch which treated derived cygwin
	programs differently from those which are mounted with -X.  Pass extra
	argument to linebuf::fromargv.
	* winf.h (MAXCYGWINCMDLEN): New define.
	(linebuf::finish): Add a new argument denoting when command line
	overflow is ok.
	(linebuf::fromargv): Ditto.
	* winf.cc (linebuf::finish): Implement above change.
	(linebuf::fromargv): Ditto.

2006-04-11  Christopher Faylor  <cgf@timesys.com>

	* Makefile.in (DLL_OFILES): Add winf.o.
	* spawn.cc: Move command line handling stuff into winf.cc.
	* winf.h: New file.
	* winf.cc: New file.

2006-04-05  Christopher Faylor  <cgf@timesys.com>

	* fhandler_socket.cc: Move iptypes.h include after winsock2 since it
	now relies on it.
	* net.cc: Ditto.

2006-04-05  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (dll_crt0_0): Move user_data->{resourcelocks,threadinterface}
	initialization here from dll_crt0_1.
	(dll_crt0_1): See above.

2006-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (fdsock): Raise default SO_RCVBUF/SO_SNDBUF buffer sizes to
	the same values as on Linux.

2006-04-03  Christopher Faylor  <cgf@timesys.com>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.
	(child_info_fork::alloc_stack): Move into this class.
	(child_info_fork::alloc_stack_hard_way): Ditto.
	* dcrt0.cc (child_info_fork::alloc_stack): Ditto.
	(child_info_fork::alloc_stack_hard_way): Ditto.
	(_dll_crt0): Reference alloc_stack via fork_info.

2006-04-03  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (linebuf::finish): Drop argument.  Don't check command line
	length.
	(spawn_guts): Remove wascygexec.  Check real_path.iscygexec instead.
	Accommodate change to linebuf::finish.

2006-04-03  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (sm): Delete.
	(alloc_stack_hard_way): Figure out where the stack lives here rather